<resources><string name="app_name" translatable="false">Noisitapp</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="new_recording">New Recording</string>
    <string name="start_recording">REC</string>
    <string name="stop_recording">STOP</string>
    <string name="upload_recording">Upload</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="error_field_required">Password required</string>
    <string name="error_invalid_password">Please, enter a valid password</string>
    <string name="error_no_password_match">Passwords do not match</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_firebase_auth">Error to authenticate the user</string>
    <string name="error_introduce_valid_email">Introduce a valid email</string>
    <string name="error_email_empty">Email field is empty</string>
    <string name="error_password_empty">Password field is empty</string>
    <string name="error_introduce_password">The password does not mach the email</string>
    <string name="error_password_doesntmatch">Passwords does not mach each </string>
    <string name="error_lenght_password">Password should have at least 6 characters</string>
    <string name="error_password_characters">Password should at least have one number and one upper letter</string>
    <string-array name="role_array">
        <item>Select your role</item>
        <item>Amateur</item>
        <item>Expert</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_to_noisitapp">Welcome to Noisitapp!</string>
    <string name="forgot_pass">I don\'t remember my password.</string>
    <string name="no_account_create">I don\'t have an account. Let\'s create me one!</string>
    <string name="log_your_account">Log into your account and start recording!</string>
    <string name="this_is_your_dashboard">Hi! This is your dashboard.</string>
    <string name="your_recordings">Your recordings</string>
    <string name="intro_create_account">We\'re so happy you decided to join the family!</string>
    <string name="tv_your_name">What\'s your name?</string>
    <string name="tv_your_email">Your email?</string>
    <string name="tv_your_pass">Choose a password</string>
    <string name="tv_your_pass_repeat">Repeat a password</string>
    <string name="tv_your_role">What\'s your role?</string>
    <string name="cb_agree_terms">I agree the terms and conditions.</string>
    <string name="tv_have_account_login">I already have an account. Go to log in!</string>
    <string name="tip1_namerecording">1. Name your recording</string>
    <string name="tip2_selectlabels">2. Select sounds you recorded</string>
    <string name="tip3_morerecordinginfo">3. Add more information (Optional)</string>
    <string name="tap_to_edit_labels">Tap to edit labels</string>
    <string name="your_current_location">Your current location:</string>
    <string name="noise_annoyance">Noise Annoyance</string>
    <string name="name_your_recording">Recording name</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="dashboard_no_recordings">You have no recordings yet! \n Let\'s record your first one!</string>
    <string name="hi">Hi </string>
    <string name="this_is_dashboard">! This is your dashboard.</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="close_alert_dialog">Close</string>
    <string name="clear_all">Clear all</string>
    <string name="select_labels">Select the labels:</string>
    <string name="save_profile">Save profile</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="name">Name</string>
    <string name="write_your_name">Write your name...</string>
    <string name="email">Email</string>
    <string name="actual_password">Actual password</string>
    <string name="your_current_password">Your current password...</string>
    <string name="edit_your_recording">Edit your recording</string>
    <string name="general_information">General Information</string>
    <string name="date_and_time">Date and time: </string>
    <string name="duration">Duration: </string>
    <string name="location">Location:</string>
    <string name="labels">Labels:</string>
    <string name="ia_labels">AI Generated Labels:</string>
    <string name="about_noisitapp">About Noisitapp</string>
    <string name="logout">Logout</string>
    <string name="my_account">My account</string>
    <string name="example_yourdomain_com">example@yourdomain.com</string>
    <string name="Toolbar_CreateAccount">Create Account</string>
    <string name="Toolbar_AboutUs">About Noisitapp</string>
    <string name="Toolbar_Dashboard">Recordings</string>
    <string name="Toolbar_EditRecording">Edit Recording</string>
    <string name="Toolbar_MyAccount">Your Profile</string>
    <string name="Toolbar_NewRecording">New Recording</string>
    <string name="Toolbar_ViewChartRecording">Recording Charts</string>
    <string name="Alert_UploadWhenRecorded">Upload your record once it\'s recorded.</string>
    <string name="Alert_FillInfo">Fill the information to upload.</string>
    <string name="Alert_NoRecordingYet">There is no recording yet!</string>
    <string name="Alert_StillRecording">You are still recording!</string>
    <string name="tip0_recording_status">Tap button below to start recording.</string>
    <string name="tv_Recording">Recording...</string>
    <string name="tv_RecordingStopped">Recording stopped.</string>
    <string name="tv_PlayingRecord">Playing record...</string>
    <string name="tv_Status_Uploading">Uploading!</string>
    <string name="tv_Status_RecStopped">Recording stopped.</string>
    <string name="tv_Status_PlayStopped">Playing stopped.</string>
    <string name="Alert_UploadingFailed">Uploading failed!</string>
    <string name="address">"Location: "</string>
    <string name="of">from</string>
    <string name="mobile_device">Mobile Device:</string>
    <string name="your_new_password">New password</string>
    <string name="your_new_password_again">Repeat your new password</string>
    <string name="your_new_password_et">New password...</string>
    <string name="your_new_password_again_et">Repeat your new password...</string>
    <string name="pass_recovery">Password recovery</string>
    <string name="About_Us_Text">Noisitapp is the final master project from Josep Fortuny Casablancas, Telecommunications Engineer from La Salle Barcelona.</string>
    <string name="last_recording">Last recording registered:</string>
    <string name="tv_no_recordings_yet_account">No recordings yet.</string>
    <string name="recording_no_labels">Error, The recording has no labels.</string>
    <string name="forgot_pass_instructions">We will send you an email to recover your password.</string>
    <string name="tv_recover_password_title">Write your email:</string>
    <string name="recover_password">Recover password</string>
    <string name="try_it_later">Try it again in a few minutes.</string>
    <string name="toast_recovery_email_sent">Recovery email sent</string>
    <string name="downloading_file">Downloading file...</string>
    <string name="tv_file_downloaded">Ready to play recording</string>
    <string name="loading">Loading...</string>
    <string name="error_recordingname_empty">The recording has to be named</string>
    <string name="alert_not_recorded">.Loading..</string>
    <string name="enter_pass">Enter your password.</string>
    <string name="enter_email">Enter your email.</string>
    <string name="edit_password">Edit Password</string>
    <string name="cb_loud_noise">It is a loud noise</string>
    <string name="cb_is_annoying">It is annoying</string>
    <string name="cb_like">I like to hear it</string>
    <string name="tv_hint_duration">Duration: </string>
    <string name="tv_hint_addressa">Address: </string>
    <string name="tv_view_chart_analysis">\u0020 Tap to View Advanced Sound Analyzer </string>
    <string name="tv_view_normal_analysis">\u0020 Tap to View Record Information </string>
    <string name="toast_error_space"> Error, insufficient storage space </string>
    <string name="toast_error_tap_button"> Error, Hold the micro button to record </string>
    <string name="toast_password_changed_correctly"> Password changed Correctly </string>
    <string name="toast_password_cannot_be_changed"> Password couldn\'t be changed </string>
    <string name="title_graph_db">DB/HZ</string>
    <string name="title_graph_a">A/HZ</string>
    <!-- <string name="app_name">Noisitapp</string>
    <string name="action_settings">Settings</string>
     Strings used for fragments for navigation
     <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
</resources>