<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:text="@string/log_your_account"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/et_mail_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/example_yourdomain_com"
                    style="@android:style/Widget.EditText"
                    android:inputType="textEmailAddress" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/et_mail_password_login"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_gravity="center"
                        style="@android:style/Widget.EditText"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/enter_pass" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/b_login"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_rounded"
                        android:text="@string/log_in"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/b_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_rounded"
                        android:text="@string/sign_up"
                        android:textColor="#FFFFFF" />
                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_remember_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_gravity="center"
                        android:text="@string/forgot_pass"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>