<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_myaccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_weight="40"
            android:weightSum="81">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_name_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_name"
                    android:inputType="text"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/email"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_email_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_yourdomain_com"
                    android:textSize="19sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="21">
                <TextView
                    android:id="@+id/tv_edit_pass_actual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/edit_password"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_edit_blue_24dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">
                <TextView
                    android:id="@+id/title_tv_numrecordings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:text="@string/last_recording"/>
                <TextView
                    android:id="@+id/tv_last_recording_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="19sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="60">

        </LinearLayout>
    </LinearLayout>
    <Spinner
        android:id="@+id/spinner_role"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"></Spinner>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_goBack_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:backgroundTint="#3D96D8"
        app:borderWidth="0dp"
        android:src="@drawable/ic_keyboard_return_white_24dp"
        app:elevation="6dp" />

</RelativeLayout>