<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_register_user">

    <ScrollView
        android:layout_above="@+id/layout_register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        tools:ignore="NotSibling">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <TextView
            android:id="@+id/tv_title"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/intro_create_account"/>
            <TextView
                android:id="@+id/tv_name"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/tv_your_name"/>
            <EditText
                android:id="@+id/et_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write your name..."
                android:backgroundTint="@color/colorPrimary"
                android:inputType="text"/>
            <TextView
                android:id="@+id/tv_email"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/tv_your_email" />

            <EditText
                android:id="@+id/et_mail_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/example_yourdomain_com"
                android:inputType="textEmailAddress"/>
            <TextView
                android:id="@+id/tv_pass"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/tv_your_pass"/>

            <EditText
                android:id="@+id/et_pass_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="Your password..."
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tv_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/tv_your_pass_repeat"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_pass_repeat_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="Repeat your password..."
                android:inputType="textPassword"/>
            <Spinner
                android:id="@+id/spinner_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            </Spinner>

            <CheckBox
                android:id="@+id/cb_terms_register"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:theme="@style/ColorStyle"
                android:textColor="@color/colorPrimary"
                android:text="@string/cb_agree_terms" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:orientation="vertical"
                android:layout_weight="15">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/b_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:backgroundTint="#3D96D8"
        android:foregroundTint="#FFFFFF"
        app:borderWidth="0dp"
        android:src="@drawable/ic_check_white_24dp"
        app:elevation="6dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/b_goBack_toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:backgroundTint="#3D96D8"
        android:foregroundTint="#FFFFFF"
        app:borderWidth="0dp"
        android:src="@drawable/ic_keyboard_return_white_24dp"
        app:elevation="6dp" />
</RelativeLayout>