<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="46">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_recoverpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/tv_recover_password_title"
                android:textAlignment="center"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_mail_recoverpassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/example_yourdomain_com"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/b_recoverpass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/recover_password"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:padding="25dp"
                android:text="@string/forgot_pass_instructions"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="46">
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/b_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        app:borderWidth="0dp"
        android:backgroundTint="#3D96D8"
        android:foregroundTint="#FFFFFF"
        android:src="@drawable/ic_keyboard_return_white_24dp"
        app:elevation="6dp" />

</RelativeLayout>