<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_recycler_recordings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="15dp">

        <TextView
            android:id="@+id/tv_recording_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="5dp"
            android:paddingLeft="3dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Recording X"
            android:drawableStart="@drawable/ic_audiotrack_blue_24dp"/>

        <LinearLayout
            android:id="@+id/linearlayout_recycler_recordings_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recording_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:text="@string/date_and_time"/>

            <TextView
                android:id="@+id/tv_recording_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:paddingLeft="3dp"
                android:textSize="15sp"
                android:text="@string/tv_hint_duration"/>

            <TextView
                android:id="@+id/tv_recording_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:paddingLeft="3dp"
                android:textSize="15sp"
                android:text="@string/tv_hint_addressa"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>